Add all my files

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">IAKBeginner</string>
+    <string name="app_name">Boo!</string>
     <string name="hbd_text">Happy Birthday, buddy!</string>
     <string name="from">from: your buddy</string>
     <string name="click">Click Me!</string>
